<resources>
    <string name="app_name">Pitchr</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="sign_up">sign up</string>
    <string name="messages">Messages</string>
    <string name="search">Search…</string>
    <string name="loading">Loading…</string>
    <string name="write_a_caption">Write a caption…</string>
    <string name="post">POST</string>
    <string name="settings">Settings</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="take_photo">Take Photo</string>
    <string name="edit_profile_picture">Edit Profile Picture</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="match">Match</string>
    <string name="profile">Profile</string>
    <string name="comment">Write a comment…</string>
    <string name="no_favorite_songs">No favorite songs</string>
    <string name="no_followers">No followers</string>
    <string name="no_following">No following</string>
    <string name="edit_favorite_songs_list">Edit favorite songs list</string>
    <string name="get_refresh_songs_from_spotify">Get/Refresh songs from Spotify</string>
    <string name="no_posts_to_show">No posts to show!</string>
    <string name="find_users_to_follow">Find Users to Follow</string>
    <string name="profile_me">My profile</string>
    <string name="profile_other">Other profile</string>
    <string name="message_hint">Message…</string>
    <string name="send">Send</string>
    <string name="no_messages">No messages. Why not say hi?</string>
    <string name="add" />
    <string name="ad_attribution">Ad</string>
    <string name="check">save</string>
    <string name="edit_list_manually">Edit list manually</string>
    <string name="snack_bar_text">Deleted favorite song</string>
    <string name="snack_bar_undo">UNDO</string>
    <string name="find_a_match">Find a match</string>
    <string name="find_users_with_the_same_music_tastes_as_you">Find users with the same music tastes as you.</string>
    <string name="finding_matches_for_you">Finding matches for you…</string>
    <string name="add_favorite_songs">Add Favorite Songs</string>
    <string name="follow">FOLLOW</string>
    <string name="following">FOLLOWING</string>
    <string name="based_on_your_matches">Based on your matches</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="search_for_users">Search for users…</string>
    <string name="no_users_selected">No users selected</string>
    <string name="ad">Ad</string>
    <string name="no_songs_selected">No songs selected</string>
    <string name="indie">Indie</string>
</resources>