<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="90dp"
        android:scaleType="fitCenter"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/spotifyGreen"
        android:ems="10"
        android:hint="@string/username"
        android:maxLines="1" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etUsername"
        android:layout_marginTop="0dp"
        android:backgroundTint="@color/spotifyGreen"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/etPassword"
        android:layout_marginTop="0dp"
        android:backgroundTint="@color/spotifyGreen"
        android:text="@string/login"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:layout_marginTop="0dp"
        android:backgroundTint="@color/gray1"
        android:text="@string/sign_up"
        android:textColor="@color/gray3" />

    <ProgressBar
        android:id="@+id/pbLoading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:indeterminateTint="@color/spotifyGreen"
        android:progressTint="@color/spotifyGreen"
        tools:visibility="visible" />

</RelativeLayout>