<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/spotifyGreen"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@color/white" />

    <ProgressBar
        android:id="@+id/pbLoading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminateTint="@color/spotifyGreen"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tvNoMessages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/rlSend"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:foregroundGravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/no_messages"
        android:textColor="@color/lightGray"
        android:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvChat"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@+id/rlSend"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:transcriptMode="alwaysScroll" >

    </androidx.recyclerview.widget.RecyclerView>

    <RelativeLayout
        android:id="@+id/rlSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp">

        <View
            android:id="@+id/div1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentTop="true"
            android:background="?android:attr/listDivider" />

        <EditText
            android:id="@+id/etMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/div1"
            android:layout_alignBottom="@+id/btSend"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="4dp"
            android:layout_toStartOf="@+id/btSend"
            android:autofillHints="message"
            android:hint="@string/message_hint"
            android:imeOptions="actionSend"
            android:inputType="textShortMessage" />

        <Button
            android:id="@+id/btSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/div1"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:background="@color/spotifyGreen"
            android:gravity="center"
            android:text="@string/send"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </RelativeLayout>

</RelativeLayout>